--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,9 @@ android {
 
 dependencies {
 
+    implementation files('libs/natty-0.13.jar')
+    implementation files('libs/antlr-4.9-complete.jar')
+    implementation files('libs/slf4j-android-1.7.30.jar')
 
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
