--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation files('libs\\slf4j-android-1.7.30.jar')
     implementation 'org.slf4j:slf4j-api:1.7.30'
 
+    //notification
+    implementation "androidx.core:core:1.6.0"
 
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
