--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,10 @@ plugins {
 android {
     compileSdkVersion 30
 
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
     defaultConfig {
         applicationId "com.example.ppn"
         minSdkVersion 26
@@ -16,6 +20,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
 
 
     buildTypes {
@@ -32,19 +37,21 @@ android {
 
 dependencies {
     //natty
-    implementation files('libs\\natty-0.13.jar')
-    implementation files('libs\\antlr-4.9-complete.jar')
-    implementation files('libs\\slf4j-android-1.7.30.jar')
+    implementation files('libs/natty-0.13.jar')
+    implementation files('libs/antlr-4.9-complete.jar')
+    implementation files('libs/slf4j-android-1.7.30.jar')
     implementation 'org.slf4j:slf4j-api:1.7.30'
 
+    androidTestImplementation "com.google.truth:truth::0.40"
+    testImplementation "com.google.truth:truth:1.1.3"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'org.jetbrains:annotations:15.0'
-    implementation 'com.google.firebase:firebase-firestore:23.0.1'
+    implementation 'com.google.firebase:firebase-firestore:23.0.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
 }
