--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,22 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:23.0.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
+
+    //prebuilt UI signin
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+
+
+    //custon sign in with gogole.
+    // Import the BoM for the Firebase platform
+    implementation platform('com.google.firebase:firebase-bom:28.3.0')
+
+    // Declare the dependency for the Firebase Authentication library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-auth'
+
+    // Also declare the dependency for the Google Play services library and specify its version
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+
+
+
 }
