--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".FireBasePreBuiltUISignIn" />
+
         <receiver android:name = ".NotificationSystem" /><!---->
 
     </application>
