--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ppn">
-    <uses-permission android:name = "android.permission.VIBRATE" /><!---->
+
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
@@ -10,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
         android:theme="@style/Theme.Ppn">
+        <activity android:name=".loading"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,8 +21,7 @@
         </activity>
         <activity android:name=".FireBasePreBuiltUISignIn" />
 
-        <receiver android:name = ".NotificationSystem" /><!---->
-
+        <receiver android:name=".NotificationSystem" />
     </application>
 
 </manifest>
